# replication_gami-tree

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: check-style.yaml  continous-integration.yaml
Gami_tree_reproduce/: .pre-commit-config.yaml  pyproject.toml
Gami_tree_reproduce/.github/: CONTRIBUTING.md
Gami_tree_reproduce/docs/: index.md
Gami_tree_reproduce/src/gami_tree_reproduce/: example.py
assets/conf/data/: sim1.yaml  sim2.yaml  sim3.yaml  sim4.yaml
assets/conf/experiments/sim1_mod1r_ebm_config1/: results.yaml
assets/conf/experiments/sim1_mod1r_ebm_config2/: results.yaml
assets/conf/experiments/sim1_mod1r_gaminet_config1/: results.yaml
assets/conf/experiments/sim1_mod1r_gaminet_config2/: results.yaml
assets/conf/experiments/sim1_mod1r_gaminet_config3/: results.yaml
assets/conf/experiments/sim1_mod1r_gaminet_config4/: results.yaml
assets/conf/experiments/sim1_mod1r_xgb_config1/: results.yaml
assets/conf/experiments/sim1_mod2r_ebm_config1/: results.yaml
assets/conf/experiments/sim1_mod2r_ebm_config2/: results.yaml
assets/conf/experiments/sim1_mod2r_gaminet_config1/: results.yaml
assets/conf/experiments/sim1_mod2r_gaminet_config2/: results.yaml
assets/conf/experiments/sim1_mod2r_gaminet_config3/: results.yaml
assets/conf/experiments/sim1_mod2r_gaminet_config4/: results.yaml
assets/conf/experiments/sim1_mod2r_xgb_config1/: results.yaml
assets/conf/experiments/sim1_mod3r_ebm_config1/: results.yaml
cache/: gamitree_model1_n500k_rho0_classification.joblib  gamitree_model2_n50k_rho05_regression.joblib  gamitree_model2_n50k_rho0_classification.joblib  gamitree_model3_n500k_rho05_classification.joblib  gamitree_model3_n500k_rho05_regression.joblib
conf/: config.yaml  data.yaml  main.yaml
conf/data/: bike.yaml  loan.yaml  openml.yaml  simulation.yaml
conf/datasets/: bike.yaml  experiment.yaml  loan.yaml
conf/inducer/: ebm.yaml  gaminet.yaml  gamitree.yaml  xgb.yaml
conf/models/: gami_tree.yaml
docs/: conf.py
src/gami_tree_reproduce/: __init__.py  data.py  data_openml.py  data_simulation.py  figure_c.py  figure_r.py  full_figure.py  inducers.py  log.py  main.py  models.py  params.py  run_experiment.py  test_stats.py  training.py  training_c.py  training_r.py  utils.py
src/gami_tree_reproduce/cache/: gamitree_model1_n500k_rho05_classification.joblib  gamitree_model1_n500k_rho05_regression.joblib  gamitree_model1_n500k_rho0_regression.joblib  gamitree_model1_n50k_rho05_classification.joblib  gamitree_model1_n50k_rho05_regression.joblib  gamitree_model1_n50k_rho0_classification.joblib  gamitree_model1_n50k_rho0_regression.joblib  gamitree_model2_n500k_rho05_classification.joblib  gamitree_model2_n500k_rho05_regression.joblib  gamitree_model2_n500k_rho0_classification.joblib  gamitree_model2_n500k_rho0_regression.joblib  gamitree_model2_n50k_rho05_classification.joblib  gamitree_model2_n50k_rho0_regression.joblib  gamitree_model3_n500k_rho0_classification.joblib  gamitree_model3_n500k_rho0_regression.joblib  gamitree_model3_n50k_rho05_classification.joblib  gamitree_model3_n50k_rho05_regression.joblib  gamitree_model3_n50k_rho0_classification.joblib  gamitree_model3_n50k_rho0_regression.joblib  gamitree_model4_n500k_rho05_classification.joblib  gamitree_model4_n500k_rho05_regression.joblib  gamitree_model4_n500k_rho0_classification.joblib  gamitree_model4_n500k_rho0_regression.joblib  gamitree_model4_n50k_rho05_classification.joblib  gamitree_model4_n50k_rho05_regression.joblib  gamitree_model4_n50k_rho0_classification.joblib  gamitree_model4_n50k_rho0_regression.joblib
src/gami_tree_reproduce/data/: evaluation.py  openml.py  postprocess.py  preprocess.py  preprocess_utils.py  simulation.py  simulation_models.py  simulation_utils.py  utils.py
src/gami_tree_reproduce/model/: gamitree.py  gamitree_old.py  inducers.py  params.py
src/gami_tree_reproduce/plot/: plot_results.py  plot_simulation.py  plot_utils.py
src/gami_tree_reproduce/plots/: plot_data.py  plot_utils.py
src/gami_tree_reproduce/tree_stats/: tree_stats_per_tree.csv  tree_stats_summary.csv  tree_stats_summary_classification.csv  tree_stats_summary_regression.csv
tests/: test_package.py
(+97 files in other folders)
