[build-system]
requires = ["uv_build>=0.7.19"]
build-backend = "uv_build"


[project]
name = "Gami_tree_reproduce"
version = "0.1.0"
authors = [
  { name = "Maocheng", email = "sean.8922xomace@gmail.com" },
  {name = "Sven Maurice Morlock", email = "svenmauricemorlock@yahoo.com"}
]
description = "Gami_tree study with reproduction"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
keywords = [
    "machine-learning",
    "replication-study",
    "data-science",
    "reproducibility",
    "gami-tree"
]
dependencies = [
    "fastparquet>=2024.11.0",
    "gaminet>=0.6.1",
    "interpret>=0.7.3",
    "numpy>=2.2.6",
    "pyarrow>=22.0.0",
    "xgboost>=3.1.2",
]

[project.urls]
Homepage = "https://github.com/MaochengX/Gami_tree_reproduce"
"Bug Tracker" = "https://github.com/MaochengX/Gami_tree_reproduce/issues"
Discussions = "https://github.com/MaochengX/Gami_tree_reproduce/discussions"
Changelog = "https://github.com/MaochengX/Gami_tree_reproduce/releases"


[dependency-groups] # cf. PEP 735
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  { include-group = "test" },
  "ruff>=0.1.0",
  "pre-commit>=3.0.0",
  "pyroma>=4.0.0",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]

[tool.uv.sources]

[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]
pythonpath = ["src"]


[tool.coverage]
run.source = ["gami_tree_reproduce"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "gami_tree_reproduce.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # pre-commit hook recommendation
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["gami_tree_reproduce._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
